@@ -60,6 +60,34 @@
   <translation type="gettext">evince</translation>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="48~alpha" type="development" date="2025-01-11">
+      <issues>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/7">#7</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/58">#58</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/706">#706</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/992">#992</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/1395">#1395</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/1395">#1395</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/1458">#1458</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/1762">#1762</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/1863">#1863</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/1951">#1951</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/1969">#1969</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/1971">#1971</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/1985">#1985</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/1985">#1985</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/1988">#1988</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/1988">#1988</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/1991">#1991</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/1996">#1996</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/2000">#2000</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/2022">#2022</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/2024">#2024</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/2030">#2030</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/2035">#2035</issue>
+        <issue url="https://gitlab.gnome.org/GNOME/evince/issues/2037">#2037</issue>
+      </issues>
+    </release>
     <release version="46.1" type="stable" date="2024-04-27" />
     <release version="46.0" type="stable" date="2024-03-16" />
     <release version="46~rc" type="development" date="2024-03-11">
