@@ -1,6 +1,6 @@
 project(
   'evince', ['c'],
-  version: '47.alpha',
+  version: '48.alpha',
   license: 'GPL-2.0-or-later',
   meson_version: '>= 0.59.0',
   default_options: [
