@@ -1,5 +1,6 @@
-Evince   47.alpha
-=================
+===============
+Evince 48.alpha
+===============
 
 backend:
   * Add missing break to make two columns right work (#1395, Alexandre Franke)
